# MLXWeek5

./: .gitignore  README.md  cleaning.py  data_loader.py  data_stream.py  dataloader.py  deepseek_code.py  diarize.py  eda.py  librispeech_eval.py  main.py  modern_wisdom_combined.txt  modern_wisdom_diarized.txt  modern_wisdom_dr_julie_smith_combined.txt  modern_wisdom_dr_julie_smith_diarized.txt  modern_wisdom_dr_julie_smith_timestamped.txt  modern_wisdom_text.txt  modern_wisdom_timestamped.txt  output.csv  output_train.csv  output_validation.csv  pyproject.toml  server.py  ssh.sh  temp.webm  test_librispeech.py  train_audio.py  train_librispeech.py  train_text.py  utils.py
client/: package-lock.json  package.json
client/app/: page.tsx
src/: dataloader.py  diarization_dataloader.py  main.py  model.py  overfit_combiner.py  overfit_training.py  test_librispeech.py  train_librispeech.py  train_the_beast.py  utils.py
src/data_prep/: diarize_data.py  transcribe_data.py
